--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>invisibox-echo-chamber</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    <link rel="icon" href="/invisibox-favicon.ico" />
 
     <meta property="og:title" content="invisibox-echo-chamber" />
     <meta property="og:description" content="Lovable Generated Project" />
